# Ethos

./: ARBITRUM_UNIFIED_PROPOSAL.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  action.yml  publish.sh
.github/workflows/: gas-regression.yml
artifacts/capture/: test.json
crates/atupa-aave/: AAVE_PROPOSAL.md
crates/atupa-aave/src/: lib.rs
crates/atupa-adapters/src/: lib.rs
crates/atupa-core/src/: config.rs  lib.rs
crates/atupa-lido/: Cargo.toml
crates/atupa-lido/src/: lib.rs
crates/atupa-nitro/: Cargo.toml
crates/atupa-nitro/src/: lib.rs
crates/atupa-output/src/: diff.rs
crates/atupa-rpc/: Cargo.toml
crates/atupa-rpc/src/: etherscan.rs
crates/atupa-sdk/: Cargo.toml  README.md
crates/atupa-sdk/src/: lib.rs
crates/ethos-adapters/: Cargo.toml
crates/ethos-adapters/src/: lib.rs
crates/ethos-cli/: Cargo.toml  README.md
crates/ethos-cli/src/: main.rs
crates/ethos-cli/src/commands/: profile.rs
crates/ethos-core/: Cargo.toml
crates/ethos-core/src/: lib.rs
crates/ethos-output/: Cargo.toml
crates/ethos-output/src/: lib.rs
crates/ethos-parser/: Cargo.toml
crates/ethos-parser/examples/: trace_analysis.rs
crates/ethos-parser/src/: aggregator.rs  lib.rs
crates/ethos-rpc/: Cargo.toml
crates/ethos-rpc/src/: lib.rs
docs/: CI_GUIDE.md  Ethos-Studio-Proposal.md  brand_identity.md  grant_opportunities.md  schema.md  spec.md
docs/proposals/: aave_v4_proposal.md  base_l2_proposal.md  uniswap_v4_proposal.md
studio/src/: App.tsx
studio/src/components/: DiffOverview.tsx
studio/src/types/: trace.ts
