[workspace]
resolver = "2"
members = [
    "crates/ethos-cli",
    "crates/ethos-rpc",
    "crates/ethos-parser",
    "crates/ethos-core",
    "crates/ethos-adapters",
    "crates/ethos-output",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dean <ethos@eth-trace.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dean/ethos"

[workspace.dependencies]
# CLI & Logging
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
colored = "2.0"

# Async & Network
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Internal Workspace
ethos-cli = { path = "crates/ethos-cli" }
ethos-rpc = { path = "crates/ethos-rpc" }
ethos-parser = { path = "crates/ethos-parser" }
ethos-core = { path = "crates/ethos-core" }
ethos-adapters = { path = "crates/ethos-adapters" }
ethos-output = { path = "crates/ethos-output" }
